--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "form-serialize": "^0.7.2",
     "lodash": "^4.17.5",
     "react": "16.3.2",
     "react-dom": "16.3.2",
